// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`CompletedNoteContent component When further work is required should show additional notes 1`] = `
<DocumentFragment>
  <span>
    Closed - Completed: 26 September 2024 at 12:34 - User comment - Assigned operatives Operative Name: 100%
    <br />
  </span>
  <div
    style="background: rgb(238, 238, 238); padding: 15px;"
  >
    <span>
      <strong
        style="font-weight: 700; color: rgb(51, 51, 51);"
      >
        Details of further work required
      </strong>
       
      <br />
      <br />
    </span>
    <span>
      <strong>
        Type of work required
      </strong>
    </span>
    <ul
      class="lbh-list lbh-list--bullet lbh-body-s"
      style="color: rgb(51, 51, 51);"
    >
      <li
        style="margin-top: 5px;"
      >
        Trade(s): Plumbing, Electrical
      </li>
    </ul>
    <br />
    <span
      style="color: rgb(51, 51, 51);"
    >
      work required
      <br />
    </span>
    <br />
    <span>
      <strong>
        Additional notes
      </strong>
      <br />
    </span>
    <span
      style="color: rgb(51, 51, 51);"
    >
      Some additonal notes about the work required
    </span>
    <br />
  </div>
</DocumentFragment>
`;

exports[`CompletedNoteContent component When further work is required should show materials 1`] = `
<DocumentFragment>
  <span>
    Closed - Completed: 26 September 2024 at 12:34 - User comment - Assigned operatives Operative Name: 100%
    <br />
  </span>
  <div
    style="background: rgb(238, 238, 238); padding: 15px;"
  >
    <span>
      <strong
        style="font-weight: 700; color: rgb(51, 51, 51);"
      >
        Details of further work required
      </strong>
       
      <br />
      <br />
    </span>
    <span>
      <strong>
        Type of work required
      </strong>
    </span>
    <ul
      class="lbh-list lbh-list--bullet lbh-body-s"
      style="color: rgb(51, 51, 51);"
    >
      <li
        style="margin-top: 5px;"
      >
        Trade(s): Plumbing, Electrical
      </li>
    </ul>
    <br />
    <span
      style="color: rgb(51, 51, 51);"
    >
      work required
      <br />
    </span>
    <br />
    <span>
      <strong>
        Materials required
      </strong>
    </span>
    <ul
      class="lbh-list lbh-list--bullet lbh-body-s"
      style="color: rgb(51, 51, 51);"
    >
      <li
        style="margin-top: 5px;"
      >
        Stock items required
      </li>
      <li
        style="margin-top: 5px;"
      >
        Non stock items required
      </li>
    </ul>
    <br />
    <span
      style="color: rgb(51, 51, 51);"
    >
      some description about materials
      <br />
    </span>
  </div>
</DocumentFragment>
`;

exports[`CompletedNoteContent component When further work is required should show the type of work 1`] = `
<DocumentFragment>
  <span>
    Closed - Completed: 26 September 2024 at 12:34 - User comment - Assigned operatives Operative Name: 100%
    <br />
  </span>
  <div
    style="background: rgb(238, 238, 238); padding: 15px;"
  >
    <span>
      <strong
        style="font-weight: 700; color: rgb(51, 51, 51);"
      >
        Details of further work required
      </strong>
       
      <br />
      <br />
    </span>
    <span>
      <strong>
        Type of work required
      </strong>
    </span>
    <ul
      class="lbh-list lbh-list--bullet lbh-body-s"
      style="color: rgb(51, 51, 51);"
    >
      <li
        style="margin-top: 5px;"
      >
        Trade(s): Carpentry, Drainage
      </li>
      <li
        style="margin-top: 5px;"
      >
        Multiple operatives
      </li>
    </ul>
    <br />
    <span
      style="color: rgb(51, 51, 51);"
    >
      work required
      <br />
    </span>
  </div>
</DocumentFragment>
`;

exports[`CompletedNoteContent component should match snapshot when multiple operatives 1`] = `
<DocumentFragment>
  <span>
    Closed - Completed: 26 September 2024 at 12:34 - User comment - Assigned operatives Operative One: 50%, Operative Two: 50% - Bonus calculation
    <br />
  </span>
</DocumentFragment>
`;

exports[`CompletedNoteContent component should match snapshot when no operative 1`] = `
<DocumentFragment>
  <span>
    Closed - Completed: 26 September 2024 at 12:34 - User comment - Bonus calculation
    <br />
  </span>
</DocumentFragment>
`;

exports[`CompletedNoteContent component should match snapshot when one operative 1`] = `
<DocumentFragment>
  <span>
    Closed - Completed: 26 September 2024 at 12:34 - User comment - Assigned operatives Operative Name: 50% - Bonus calculation
    <br />
  </span>
</DocumentFragment>
`;

exports[`CompletedNoteContent component should match snapshot when payment type is Bonus 1`] = `
<DocumentFragment>
  <span>
    Closed - Completed: 26 September 2024 at 12:34 - User comment - Assigned operatives Operative Name: 100% - Bonus calculation
    <br />
  </span>
</DocumentFragment>
`;

exports[`CompletedNoteContent component should match snapshot when payment type is Close to Base 1`] = `
<DocumentFragment>
  <span>
    Closed - Completed: 26 September 2024 at 12:34 - User comment - Assigned operatives Operative Name: 100% - Close to base (Operative payment made)
    <br />
  </span>
</DocumentFragment>
`;

exports[`CompletedNoteContent component should match snapshot when payment type is Overtime 1`] = `
<DocumentFragment>
  <span>
    Closed - Completed: 26 September 2024 at 12:34 - User comment - Assigned operatives Operative Name - Overtime work order (SMVs not included in Bonus)
    <br />
  </span>
</DocumentFragment>
`;

exports[`CompletedNoteContent component should match snapshot when payment type is null 1`] = `
<DocumentFragment>
  <span>
    Closed - Completed: 26 September 2024 at 12:34 - User comment - Assigned operatives Operative Name: 100%
    <br />
  </span>
</DocumentFragment>
`;

exports[`CompletedNoteContent component should match snapshot when user comment is empty 1`] = `
<DocumentFragment>
  <span>
    Closed - Completed: 26 September 2024 at 12:34 - Assigned operatives Operative Name: 100% - Bonus calculation
    <br />
  </span>
</DocumentFragment>
`;

exports[`CompletedNoteContent component should match snapshot when user comment is not empty 1`] = `
<DocumentFragment>
  <span>
    Closed - Completed: 26 September 2024 at 12:34 - User comment - Assigned operatives Operative Name: 100% - Bonus calculation
    <br />
  </span>
</DocumentFragment>
`;

exports[`CompletedNoteContent component should match snapshot when user has uploaded photos 1`] = `
<DocumentFragment>
  <span>
    Closed - Completed: 26 September 2024 at 12:34 - User comment - Assigned operatives Operative Name: 100% - Bonus calculation
    <br />
  </span>
  <br />
  <span>
    <a
      class="lbh-link"
      href="#photos-tab"
    >
      View photos
    </a>
     
    <br />
  </span>
</DocumentFragment>
`;
